--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "hoc lap trinh tai f8",
 	"main": "index.js",
 	"scripts": {
-		"start": "json-server --watch db.json --port 3000"
+		"start": "json-server --watch db.json --port 3000 -m ./node_modules/json-server-auth"
 	},
 	"keywords": [
 		"f8",
@@ -13,6 +13,7 @@
 	"author": "hoangnm",
 	"license": "MIT",
 	"dependencies": {
-		"json-server": "^0.17.4"
+		"json-server": "^0.17.4",
+		"json-server-auth": "^2.1.0"
 	}
 }
