--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "f8-k12",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "vite": "^5.2.0"
-  },
-  "dependencies": {
-    "json-server": "^0.17.4",
-    "json-server-auth": "^2.1.0",
-    "navigo": "^8.11.1"
-  }
+	"name": "f8-k12",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "concurrently \"vite\" \"json-server --watch db.json --port 3000 -m ./node_modules/json-server-auth\"",
+		"build": "vite build",
+		"preview": "vite preview"
+	},
+	"devDependencies": {
+		"vite": "^5.2.0"
+	},
+	"dependencies": {
+		"concurrently": "^9.1.2",
+		"json-server": "^0.17.4",
+		"json-server-auth": "^2.1.0",
+		"navigo": "^8.11.1"
+	}
 }
